Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-14.x.x	200x-xx-xx
----------

Deprecation status:

  Unchanged from 14.2.0

File formats:

  o Slight improvement to A-law/u-law conversion accuracy: round LSB
    instead of truncating.  (robs)

Effects:

  o New `overdrive' effect.  (robs)
  o New `pluck' and `tpdf' types for `synth'.  (robs)
  o Can now set common parameters for multiple `synth' channels.  (robs)
  o Fix `repeat' sometimes stopping repeating too soon.  (robs)

Other new features:

  o 

Other bug fixes:

  o Fix [2262177] SoX build could fail with parse /etc/issue error.  (robs)
  o Fix reading AIFF files with pad bytes in COMT chunks. (Joe Holt)

Internal improvements:

  o 


sox-14.2.0	2008-11-09
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]
  ated in  [F(ormat)] [E(ffect)]   Replacement
  -------  ----------------------  ----------------------
  14.0.0   E pitch                 new pitch = old key

Previously deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
  -------  ----------------------  ----------------------  -------
  14.1.0   E resample              ~= rate                 2009-01-29
  14.1.0   E polyphase             ~= rate                 2009-01-29
  14.1.0   E rabbit                ~= rate                 2009-01-29
  14.1.0   F flac: libFLAC 1.1.1   libFLAC > 1.1.1         2009-01-29
  14.1.0   F wve (native)          wve (libsndfile)        2009-07-29
  14.1.0   Behaviour whereby       soxi                    2009-07-29
           sox -V file(s) -n
           doesn't read to EOF.

Newly deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal